--- a/work/first/index.html
+++ b/work/first/index.html
@@ -48,6 +48,36 @@
 </div>
 <script src="../../common/js/jquery.js"></script>
 <script>
+  $(function () {
+    $('#q1').css('color', 'red');
+    $('#q2').click(function() {
+      $(this).css('background-color', 'pink');
+    });
+    $('#q3').click(function() {
+      $(this).before('DOM前')
+             .after('DOM後')
+             .prepend('DOM内前')
+             .append('DOM内後');
+    });
+    $('#q4').click(function() {
+      $(this).addClass('large');
+    });
+    $('#q5').click(function() {
+      $(this).animate({
+        'margin-top' : '100px',
+        'margin-left' : '100px',
+      }, 2000);
+    });
+    $('#q6').children('li').click(function() {
+      const clickNum = $(this).index();
+      console.log(clickNum);
+      alert(clickNum);
+    });
+    $('#q7').click(function () {
+      const result = $(this).data('text');
+      console.log(result);
+    });
+  })
 // 第1問  id='q1'の要素の文字色を赤色にせよ。
 // 第2問  id='q2'の要素をクリックしたら背景色をピンクにせよ。
 // 第3問  id='q3'の要素をクリックしたらこの要素の前後とこの要素内の前後にテキストを挿入せよ。
