--- a/work/second/index.html
+++ b/work/second/index.html
@@ -21,6 +21,7 @@
     </div>
     <script src="../../common/js/jquery.js"></script>
     <script>
+      // ready構文　HTMLができてから
       $(function() {
         $('.modal-show').click(function() {
           $('.modal').fadeIn();
